[package]
name = "queenmod"
version = "0.1.0"
authors = ["Robert Jördens <rj@quartiq.de>"]

[features]
bkpt = [ ]
itm = [ ]
simd = [ ]

[dependencies]
cortex-m = "0.5"
cortex-m-rt = "0.5"
panic-itm = "0.2"
panic-abort = "0.2"
stm32f4 = { version = "0.2", features = ["stm32f446", "rt"] }

[build-dependencies]
built = "0.2.3"

[profile.dev]
codegen-units = 1
incremental = false

[profile.release]
debug = true
lto = true
codegen-units = 1
incremental = false
